potential fix for #2860 [http://stackoverflow.com/questions/25572189/how-come-in-chrome-i-get-a-black-background-when-trying-to-print-but-in-ie-it-lo]

--- a/src/sass/print.scss
+++ b/src/sass/print.scss
@@ -3,6 +3,8 @@
 	#secured-print {
 		* {
 			word-break: break-word;
+			border-radius: 0 !important;
+			box-shadow: none !important;
 		}
 		table.print {
 			width: initial !important;
